# MolecularSolidBuilder

./: README.md  setup.cfg  setup.py
MacroMoleculeModeler/: Combine_Subunits.py  Heteroatom_Exchanger.py  Hydrocarbons_Builder.py  MinimumBoundingBox3D.py  PDBfile_Converter.py  Utility.py  __init__.py  pymol_rpc.py
MacroMoleculeModeler/Previous_version/: Heteroatom_Exchange.py  preserve_Hs.py  test_tree2.py
MacroMoleculeModeler/ReaxFF_min/: dump_elem.data  in_min.reaxc  mass.data  min.xyz  molecules.data  out.reax  pair.data
MolecularSolidBuilder/: Break_crosslink.py  Change_Ringsize.py  Examine_CNMR.py  Heteroatom_Exchanger.py  Hydrocarbons_Builder.py  MinimumBoundingBox3D.py  Molfile_Converter.py  PDBfile_Converter.py  Utility.py  Workflow2_Hybrid_md_dft.py  __init__.py  pymol_rpc.py  test_tree.py
MolecularSolidBuilder/Previous_version/: Break_crosslink.py  Build_HC_revise.py  Change_Ringsize.py  Combine_Subunits.py  PDBfile_importer.py
MolecularSolidBuilder/ReaxFF_min/: in.reaxc  min.dump
MolecularSolidBuilder/src/: Examine_CNMR.py  Heteroatom_Exchanger.py  Hydrocarbons_Builder.py  PDBfile_Converter.py  Utility.py
MolecularSolidBuilder/workflow/: Hybrid_molecule_solid.py
molecularsolidbuilder/: Combine_Subunits.py  Examine_CNMR_pymol.py  Heteroatom_Exchanger.py  Hydrocarbons_Builder.py  Hydrocarbons_Descriptor.py  MinimumBoundingBox3D.py  Rdkit_Converters.py  Run_MD.py  Utility.py  preserve_Hs.py  pymol_rpc.py
molecularsolidbuilder/MolecularSolidBuilder.egg-info/: PKG-INFO  (+2 more)
src/: Bond_transformation.py  Combine_Subunits.py  SLURM_queue_run.py
(+56 files in other folders)
